# scsi

./: .gitignore  CLAUDE.md  README.md  awgn_mnist.py  awgn_mnist_cm.py  awgn_mnist_transformer.py  consistency.py  lifted_2dtoys.ipynb  lifted_2dtoys_reverse_dream.py  main.py  mnist_si_transformer.py  mnist_transformer.py  mra_mnist_unet.ipynb  mra_mnist_unet.py  mra_mnist_unet_equivariant.py  profile_lifted_2dtoys.py  pyproject.toml  scsi_mnist_transformer.py  submit_awgn_mnist_transformer.SBATCH  submit_mra_mnist_transformer.SBATCH  test.ipynb
experiments/: lifted2d.py  objects.py
image_2d/: corruption.py  data.py  em.py  main.py  main_warmup_curriculum.py  model.py  scsi_mnist_transformer.py  si.py  study_coupling.py  submit_awgn_mnist_transformer.SBATCH  submit_curriculum_awgn_3levels.SBATCH  submit_curriculum_drop_mra_7levels.SBATCH  submit_curriculum_mra_10el_1em.SBATCH  submit_curriculum_mra_10el_2em.SBATCH  submit_curriculum_mra_10el_3em.SBATCH  submit_curriculum_mra_10el_5em.SBATCH  submit_curriculum_mra_3el_1em.SBATCH  submit_curriculum_mra_3el_2em.SBATCH  submit_curriculum_mra_3el_3em.SBATCH  submit_curriculum_mra_3el_5em.SBATCH  submit_curriculum_mra_3levels.SBATCH  submit_curriculum_mra_5el_1em.SBATCH  submit_curriculum_mra_5el_2em.SBATCH  submit_curriculum_mra_5el_3em.SBATCH  submit_curriculum_mra_5el_5em.SBATCH  submit_curriculum_mra_5levels.SBATCH  submit_curriculum_mra_7el_1em.SBATCH  submit_curriculum_mra_7el_2em.SBATCH  submit_curriculum_mra_7el_3em.SBATCH  submit_curriculum_mra_7el_5em.SBATCH  submit_curriculum_mra_gradual.SBATCH  submit_curriculum_mra_longer.SBATCH  submit_curriculum_mra_multiem.SBATCH  submit_drop_mra_mnist_transformer.SBATCH  submit_mra_mnist_transformer.SBATCH
image_2d_jiequn/: CLAUDE.md  backwards.py  bootstrap.py  cli.py  data.py  forward.py  main.py  model.py  networks_dit.py  reconstruct_grid.ipynb  sample.py  (+3 more)
(+248 files in other folders)
